--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ baseURL: 'https://lukerambling.com/'
 defaultContentLanguage: en
 
 title: Luke Rambling
-theme: hugo-PaperMod
+theme: PaperMod
 paginate: 5
 
 enableInlineShortcodes: true
@@ -18,10 +18,10 @@ params:
     defaultTheme: auto
 
     ShowToc: false
-    ShowWordCount: true
+    # ShowWordCount: true
     ShowReadingTime: true
     ShowBreadCrumbs: false
-    ShowShareButtons: true
+    # ShowShareButtons: true
     ShowPostNavLinks: true
     ShowFullTextinRSS: true
     displayFullLangName: true
@@ -75,7 +75,8 @@ params:
 
 languages:
     en:
-        languageName: "English"
+        languageName: "EN"
+        languageAltTitle: "Englisch"
         weight: 1
         taxonomies:
           category: categories
@@ -104,8 +105,8 @@ languages:
                 weight: 4
 
     de:
-        languagename: ":de:"
-        languageAltTitle: German
+        languagename: "DE"
+        languageAltTitle: "German"
         weight: 2
         taxonomies:
           category: de-categories
@@ -143,10 +144,19 @@ minify:
     disableXML: true
 
 markup:
-  highlight:
-    codeFences: true
-    guessSyntax: true
-    lineNoStart: 1
-    lineNos: true
-    style: dracula
-    tabWidth: 4
+    highlight:
+        style: nord
+        tabWidth: 4
+        lineNoStart: 1
+        lineNos: true
+        codeFences: true
+        guessSyntax: true
+    goldmark:
+        renderer:
+            unsafe: true
+
+services:
+    instagram:
+        disableInlineCSS: true
+    twitter:
+        disableInlineCSS: true
