--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
-
-[submodule "themes/PaperMod"]
-	path = themes/PaperMod
-	url = https://github.com/adityatelange/hugo-PaperMod.git
 [submodule "themes/PaperModX"]
 	path = themes/PaperModX
-	url = https://github.com/reorx/hugo-PaperModX.git
+	url = https://github.com/lguenth/hugo-PaperModX
+[submodule "themes/PaperMod"]
+	path = themes/PaperMod
+	url = https://github.com/lguenth/hugo-PaperMod
